# CapstoneProject

./: CMakeLists.txt  main.cpp
include/: client.h  encrypt.h  server.h  setup_chat.h
src/: client.cpp  encrypt.cpp  server.cpp  setup_chat.cpp
